--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://*.firebaseio.com" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy"
+    content="script-src 'self' https://electron-chat-3441b.firebaseio.com https://s-usc1c-nss-282.firebaseio.com https://ereact-chat-default-rtdb.firebaseio.com/ https://s-usc1c-nss-200.firebaseio.com/" />
   <title>Electron Chat</title>
 </head>
 
